cvte/jenkins.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins
  namespace: jenkins
  labels:
    component: jenkins
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    component: jenkins
  type: "ClusterIP"
